--- a/third-games/product-service/pom.xml
+++ b/third-games/product-service/pom.xml
@@ -16,7 +16,10 @@
     <name>product-service</name>
 
     <dependencies>
-        <!-- User Service specific dependencies -->
-        <!-- No need to define common dependencies here -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
     </dependencies>
 </project>
