--- a/third-games/common/src/main/resources/application.yml
+++ b/third-games/common/src/main/resources/application.yml
@@ -1,4 +1,5 @@
-logging:
-  level:
-    org.springframework: DEBUG
-    com.baomidou.mybatisplus: DEBUG
+mybatis-plus:
+  mapper-locations: classpath:/mapper/**/*.xml
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
