--- a/third-games/pom.xml
+++ b/third-games/pom.xml
@@ -8,10 +8,18 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.5.0</version> <!-- 替换为你实际使用的版本 -->
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
+
     <modules>
+        <module>common</module>
         <module>user-service</module>
         <module>product-service</module>
-        <module>common</module>
     </modules>
 
     <dependencyManagement>
