--- a/third-games/product-service/src/main/resources/application.yml
+++ b/third-games/product-service/src/main/resources/application.yml
@@ -13,3 +13,8 @@ spring:
   application:
     name: product-service
 
+
+jwt:
+  login-type: app
+  secret-key: third_games_secret
+  timeout: 86400
