--- a/third-games/user-service/src/main/resources/application.yml
+++ b/third-games/user-service/src/main/resources/application.yml
@@ -1,14 +1,23 @@
 logging:
   level:
-    root: WARN
-    org.springframework: ERROR
+    root: DEBUG
+    org.springframework: WARN
     com.baomidou.mybatisplus: DEBUG
+    org.springframework.cloud: DEBUG
 
 server:
   port: 8080
+  tomcat:
+    apr:
+      enabled: false
 
 spring:
   profiles:
     active: dev
   application:
     name: user-service
+
+jwt:
+  login-type: app
+  secret-key: third_games_secret
+  timeout: 86400
