--- a/third-games/user-service/pom.xml
+++ b/third-games/user-service/pom.xml
@@ -65,5 +65,13 @@
             <artifactId>sa-token-jwt</artifactId>
             <version>1.34.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
     </dependencies>
 </project>
