添加网关服务

--- a/third-games/pom.xml
+++ b/third-games/pom.xml
@@ -12,6 +12,7 @@
 
     <modules>
         <module>common-service</module>
+        <module>gateway-service</module>
         <module>captcha-service</module>
         <module>user-service</module>
     </modules>
