--- a/third-games/common-service/pom.xml
+++ b/third-games/common-service/pom.xml
@@ -48,5 +48,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-jwt</artifactId>
+            <version>${sa-token-jwt.version}</version>
+        </dependency>
     </dependencies>
 </project>
