--- a/third-games/user-service/pom.xml
+++ b/third-games/user-service/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-jwt</artifactId>
-            <version>1.34.0</version>
+            <version>${sa-token-jwt.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
