--- a/third-games/captcha-service/pom.xml
+++ b/third-games/captcha-service/pom.xml
@@ -82,4 +82,16 @@
             <version>${sa-token-jwt.version}</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
