--- a/third-games/captcha-service/src/main/resources/application-dev.properties
+++ b/third-games/captcha-service/src/main/resources/application-dev.properties
@@ -1,7 +1,10 @@
+nacos.server-addr=192.168.10.126:8848
+nacos.username=nacos
+nacos.password=123456
+
 spring.config.import=optional:nacos:common.yaml
-spring.cloud.nacos.server-addr=192.168.10.126:8848
-spring.cloud.nacos.config.username=nacos
-spring.cloud.nacos.config.password=123456
+spring.cloud.nacos.server-addr=${nacos.server-addr}
+spring.cloud.nacos.config.username=${nacos.username}
+spring.cloud.nacos.config.password=${nacos.password}
 spring.cloud.nacos.config.name=common
 spring.cloud.nacos.config.file-extension=yaml
-
