--- a/third-games/gateway-service/src/main/resources/application-dev.properties
+++ b/third-games/gateway-service/src/main/resources/application-dev.properties
@@ -1,6 +1,10 @@
+nacos.server-addr=192.168.10.126:8848
+nacos.username=nacos
+nacos.password=123456
+
 spring.config.import=optional:nacos:gateway.yaml
-spring.cloud.nacos.server-addr=192.168.10.126:8848
-spring.cloud.nacos.config.name=common
+spring.cloud.nacos.server-addr=${nacos.server-addr}
+spring.cloud.nacos.config.username=${nacos.username}
+spring.cloud.nacos.config.password=${nacos.password}
+spring.cloud.nacos.config.name=gateway
 spring.cloud.nacos.config.file-extension=yaml
-spring.cloud.nacos.discovery.group=DEFAULT_GROUP
-spring.cloud.nacos.discovery.cluster-name=DEFAULT
