--- a/third-games/user-service/src/main/resources/application-prod.properties
+++ b/third-games/user-service/src/main/resources/application-prod.properties
@@ -1,5 +1,26 @@
+nacos.server-addr=192.168.10.126:8848
+nacos.username=nacos
+nacos.password=123456
+
 spring.config.import=optional:nacos:common.yaml
-spring.cloud.nacos.server-addr=192.168.10.126:8848
-spring.cloud.nacos.config.username=nacos
-spring.cloud.nacos.config.password=123456
+spring.cloud.nacos.server-addr=${nacos.server-addr}
+spring.cloud.nacos.config.username=${nacos.username}
+spring.cloud.nacos.config.password=${nacos.password}
+spring.cloud.nacos.config.name=common
 spring.cloud.nacos.config.file-extension=yaml
+
+seata.enabled=true
+seata.application-id=${spring.application.name}
+seata.tx-service-group=my_tx_group
+seata.registry.type=nacos
+seata.registry.nacos.server-addr=${nacos.server-addr}
+seata.registry.nacos.username=${nacos.username}
+seata.registry.nacos.password=${nacos.password}
+seata.config.type=nacos
+seata.config.nacos.server-addr=${nacos.server-addr}
+seata.config.nacos.username=${nacos.username}
+seata.config.nacos.password=${nacos.password}
+seata.service.vgroup-mapping.my_tx_group=default
+seata.service.enable-degrade=true
+seata.data-source-proxy-mode=AT
+seata.enable-auto-data-source-proxy=true
